--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header class="hero" style="height: 50vh; background-image: url('https://cdn.pixabay.com/photo/2016/02/19/11/53/human-1207679_960_720.jpg');">
+  <header class="hero" style="height: 50vh; background-image: url('https://img.freepik.com/premium-vector/food-donation-big-box-flat-design_8251-242.jpg?semt=ais_hybrid&w=740');">
     <div class="overlay">
       <h1>About FeedConnect</h1>
       <p>Our mission is to eliminate hunger and reduce food wastage.</p>
