--- a/index.html
+++ b/index.html
@@ -26,17 +26,17 @@
     </section>
     <section class="features">
       <div class="feature">
-        <img src="https://cdn.pixabay.com/photo/2016/03/05/19/02/hands-1238468_960_720.jpg" alt="Hands giving food">
+        <img src="https://media.istockphoto.com/id/1492759962/photo/concept-of-giving-free-food-to-the-poor-in-the-community-volunteers-handing-out-food-to.jpg?s=612x612&w=0&k=20&c=qYX37R38Ynj4fiQLAZImX0XgTCJCI-Tsy2-Qzi2FQ5g=" alt="Hands giving food">
         <h3>Donate Surplus Food</h3>
         <p>Restaurants and individuals can post food availability in real-time.</p>
       </div>
       <div class="feature">
-        <img src="https://cdn.pixabay.com/photo/2016/11/18/16/19/help-1837349_960_720.jpg" alt="Helping hands">
+        <img src="https://media.istockphoto.com/id/872576234/photo/rescue.jpg?s=612x612&w=0&k=20&c=53Sskdnw4l3O_Wvx6sIcvveWwSxBxT1X-kkrZg-W9Cw=" alt="Helping hands">
         <h3>Volunteer for Pickup</h3>
         <p>Join as a volunteer to collect and distribute food to those in need.</p>
       </div>
       <div class="feature">
-        <img src="https://cdn.pixabay.com/photo/2017/01/31/13/14/child-2026204_960_720.jpg" alt="Happy child eating">
+        <img src="https://media.istockphoto.com/id/941788480/photo/portrait-of-girl-kid-having-mid-day-meal-in-indian-school.jpg?s=612x612&w=0&k=20&c=tdMRbWtA9rtYSE_6EpXpSl5E4d4xdvqK7egdYd_Q_MM=" alt="Happy child eating">
         <h3>Make an Impact</h3>
         <p>Your small action can feed someone in need and reduce food waste.</p>
       </div>
