--- a/volunteer.html
+++ b/volunteer.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header class="hero" style="height: 50vh; background-image: url('https://cdn.pixabay.com/photo/2020/03/06/07/35/care-4908062_960_720.jpg');">
+  <header class="hero" style="height: 50vh; background-image: url('https://www.shutterstock.com/shutterstock/videos/3493788363/thumb/1.jpg?ip=x480');">
     <div class="overlay">
       <h1>Become a Volunteer</h1>
       <p>Help us bridge the gap between food donors and those in need.</p>
