--- a/index.html
+++ b/index.html
@@ -41,6 +41,28 @@
         <p>Your small action can feed someone in need and reduce food waste.</p>
       </div>
     </section>
+    <section class="org-signin" style="background-color: #fff; padding: 40px; border-radius: 10px; box-shadow: 0 4px 10px rgba(0,0,0,0.1); margin-top: 40px; text-align: center;">
+  <h2 style="margin-bottom: 20px; font-size: 28px;">Orphanages & Old Age Homes Sign In</h2>
+  <p style="font-size: 16px; margin-bottom: 30px;">
+    If you're an organization that needs food support, please sign in to manage your requests and track donations.
+  </p>
+
+  <form action="org-dashboard.html" method="post" style="max-width: 400px; margin: 0 auto; text-align: left;">
+    <label for="orgEmail" style="font-weight: 500;">Email Address</label><br>
+    <input type="email" id="orgEmail" name="orgEmail" required style="width: 100%; padding: 10px; margin-bottom: 20px; border-radius: 5px; border: 1px solid #ccc;"><br>
+
+    <label for="orgPassword" style="font-weight: 500;">Password</label><br>
+    <input type="password" id="orgPassword" name="orgPassword" required style="width: 100%; padding: 10px; margin-bottom: 20px; border-radius: 5px; border: 1px solid #ccc;"><br>
+
+    <button type="submit" style="padding: 10px 20px; background-color: #28a745; color: white; border: none; border-radius: 5px; cursor: pointer;">
+      Sign In
+    </button>
+
+    <p style="margin-top: 15px; font-size: 14px;">
+      New here? <a href="org-register.html">Register your organization</a>
+    </p>
+  </form>
+</section>
   </main>
   <footer>
     <p>© 2025 FeedConnect | Contact: info@feedconnect.org</p>
