--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
       <p>Connecting surplus food with those in need</p>
       <nav>
         <a href="donor.html">Donate Food</a>
-        <a href="volunteer.html">Become a Volunteer</a>
+        <a href="volunteer.html">Become a Volunteer</a> 
+        <a href="Consumer.html">Accept Food</a>
+        
         <a href="about.html">About Us</a>
       </nav>
     </div>
