--- a/consumer.html
+++ b/consumer.html
@@ -1,22 +1,85 @@
-<section class="org-signin" style="background-color: #fff; padding: 40px; border-radius: 10px; box-shadow: 0 4px 10px rgba(0,0,0,0.1); margin-top: 40px; text-align: center;">
-  <h2 style="margin-bottom: 20px; font-size: 28px;">Orphanages & Old Age Homes Sign In</h2>
-  <p style="font-size: 16px; margin-bottom: 30px;">
-    If you're an organization that needs food support, please sign in to manage your requests and track donations.
-  </p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Acceptor Registration - FeedConnect</title>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500&display=swap" rel="stylesheet">
+  <style>
+    body {
+      font-family: 'Poppins', sans-serif;
+      background: #f7f7f7;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+    }
+    .container {
+      background: white;
+      padding: 30px;
+      border-radius: 10px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+      width: 400px;
+    }
+    h2 {
+      text-align: center;
+      margin-bottom: 20px;
+    }
+    input {
+      width: 100%;
+      padding: 10px;
+      margin-bottom: 15px;
+      border-radius: 5px;
+      border: 1px solid #ccc;
+    }
+    button {
+      background-color: #2e7d32;
+      color: white;
+      border: none;
+      padding: 10px 20px;
+      width: 100%;
+      border-radius: 5px;
+      cursor: pointer;
+    }
+  </style>
+</head>
+<body>
 
-  <form action="org-dashboard.html" method="post" style="max-width: 400px; margin: 0 auto; text-align: left;">
-    <label for="orgEmail" style="font-weight: 500;">Email Address</label><br>
-    <input type="email" id="orgEmail" name="orgEmail" required style="width: 100%; padding: 10px; margin-bottom: 20px; border-radius: 5px; border: 1px solid #ccc;"><br>
-
-    <label for="orgPassword" style="font-weight: 500;">Password</label><br>
-    <input type="password" id="orgPassword" name="orgPassword" required style="width: 100%; padding: 10px; margin-bottom: 20px; border-radius: 5px; border: 1px solid #ccc;"><br>
-
-    <button type="submit" style="padding: 10px 20px; background-color: #28a745; color: white; border: none; border-radius: 5px; cursor: pointer;">
-      Sign In
-    </button>
-
-    <p style="margin-top: 15px; font-size: 14px;">
-      New here? <a href="org-register.html">Register your organization</a>
-    </p>
+<div class="container">
+  <h2>Register Your Organization</h2>
+  <form id="acceptForm">
+    <input type="text" id="name" placeholder="Organization Name" required>
+    <input type="email" id="email" placeholder="Email Address" required>
+    <input type="text" id="phone" placeholder="Contact Number" required>
+    <input type="text" id="location" placeholder="Location" required>
+    <button type="submit">Register</button>
   </form>
-</section>
+</div>
+
+<script>
+  const scriptURL = "YOUR_GOOGLE_SCRIPT_URL"; // Replace this with your deployed Apps Script Web App URL
+
+  document.getElementById("acceptForm").addEventListener("submit", function(e) {
+    e.preventDefault();
+
+    fetch(scriptURL, {
+      method: "POST",
+      body: JSON.stringify({
+        name: document.getElementById("name").value,
+        email: document.getElementById("email").value,
+        phone: document.getElementById("phone").value,
+        location: document.getElementById("location").value
+      })
+    })
+    .then(response => {
+      alert("Registration successful!");
+      document.getElementById("acceptForm").reset();
+    })
+    .catch(error => {
+      alert("Error registering. Try again.");
+      console.error("Error:", error);
+    });
+  });
+</script>
+
+</body>
+</html>
