--- a/consumer.html
+++ b/consumer.html
@@ -56,7 +56,7 @@
 </div>
 
 <script>
-  const scriptURL = "YOUR_GOOGLE_SCRIPT_URL"; // Replace this with your deployed Apps Script Web App URL
+  const scriptURL = "https://script.google.com/macros/s/AKfycbytpQuIpGNEWoh5oXY2KlmL1NR2C8wgrOpbb05GNg6keIvqzkuZJySX6e3Qj8UvzFuK/exec"; // Replace this with your deployed Apps Script Web App URL
 
   document.getElementById("acceptForm").addEventListener("submit", function(e) {
     e.preventDefault();
