--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
       <nav>
         <a href="donor.html">Donate Food</a>
         <a href="volunteer.html">Become a Volunteer</a> 
-        <a href="consumer.html">Accept Food</a>
+        <a href="acceptor.html">
+          <button>Register</button></a>
         
         <a href="about.html">About Us</a>
       </nav>
