--- a/donor.html
+++ b/donor.html
@@ -85,11 +85,8 @@
       <input type="text" id="location" required>
 
       <label for="recipient">Select Orphanage / Old Age Home</label>
-      <select id="recipient" onchange="showChatBox()" required>
-        <option value="">-- Select an Organization --</option>
-        <option value="Grace Orphanage">Grace Orphanage</option>
-        <option value="Sunrise Old Age Home">Sunrise Old Age Home</option>
-        <option value="Little Steps Home">Little Steps Home</option>
+      <select id="recipient" required>
+        <option>Loading...</option>
       </select>
 
       <button type="submit">Submit Donation</button>
