--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
       <nav>
         <a href="donor.html">Donate Food</a>
         <a href="volunteer.html">Become a Volunteer</a> 
-        <a href="acceptor.html">
-          <button>Register</button></a>
+        <a href="acceptor.html">Register</a>
         
         <a href="about.html">About Us</a>
       </nav>
