--- a/index.html
+++ b/index.html
@@ -17,34 +17,46 @@
       font-family: 'Montserrat', sans-serif;
       background: linear-gradient(135deg, #e0f7fa, #e1bee7);
       color: #333;
-      height: 100vh;
-      display: flex;
-      align-items: center;
-      justify-content: center;
+      line-height: 1.6;
     }
 
-    .container {
-      max-width: 900px;
-      background: white;
-      border-radius: 15px;
-      padding: 50px;
-      box-shadow: 0 15px 35px rgba(0, 0, 0, 0.1);
+    header {
+      background: #4a148c;
+      color: white;
+      padding: 30px 0;
       text-align: center;
-      animation: fadeIn 1s ease-in-out;
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
     }
 
-    @keyframes fadeIn {
-      from { opacity: 0; transform: translateY(20px); }
-      to { opacity: 1; transform: translateY(0); }
+    header h1 {
+      margin-bottom: 10px;
+      font-size: 2.8em;
     }
 
-    h1 {
-      font-size: 3em;
-      color: #4a148c;
-      margin-bottom: 20px;
+    nav {
+      margin-top: 20px;
     }
 
-    p {
+    nav a {
+      color: white;
+      margin: 0 15px;
+      text-decoration: none;
+      font-weight: bold;
+      transition: color 0.3s;
+    }
+
+    nav a:hover {
+      color: #ffeb3b;
+    }
+
+    section {
+      max-width: 1000px;
+      margin: 50px auto;
+      padding: 0 20px;
+      text-align: center;
+    }
+
+    .hero p {
       font-size: 1.2em;
       margin-bottom: 40px;
     }
@@ -87,23 +99,82 @@
       transform: scale(1.05);
     }
 
+    .btn.volunteer {
+      background: linear-gradient(to right, #ff7043, #f4511e);
+      color: white;
+    }
+
+    .btn.volunteer:hover {
+      background: linear-gradient(to right, #e64a19, #bf360c);
+      transform: scale(1.05);
+    }
+
+    .section-title {
+      font-size: 2em;
+      margin-bottom: 20px;
+      color: #4a148c;
+    }
+
+    footer {
+      background: #4a148c;
+      color: white;
+      text-align: center;
+      padding: 20px;
+      margin-top: 50px;
+    }
+
     @media (max-width: 600px) {
-      h1 { font-size: 2em; }
-      .btn { width: 100%; }
+      header h1 {
+        font-size: 2em;
+      }
+
+      .btn {
+        width: 100%;
+        margin: 10px 0;
+      }
     }
   </style>
 </head>
 <body>
 
-  <div class="container">
-    <h1>Welcome to FeedConnect</h1>
-    <p>Join us in connecting food donors with orphanages and old age homes in need.</p>
+  <header>
+    <h1>FeedConnect</h1>
+    <p>Bridging Hunger with Hope</p>
+    <nav>
+      <a href="#about">About</a>
+      <a href="#donate">Donate</a>
+      <a href="#register">Register Org</a>
+      <a href="#volunteer">Volunteer</a>
+    </nav>
+  </header>
 
+  <section class="hero">
+    <p>Welcome to FeedConnect – A platform that connects food donors with orphanages and old-age homes in need. Make a difference with your surplus food today!</p>
     <div class="buttons">
       <a href="donor.html" class="btn donor">Donate Food</a>
-      <a href="acceptor.html" class="btn acceptor">Register as Orphanage / Old Age Home</a>
+      <a href="acceptor.html" class="btn acceptor">Register Organization</a>
+      <a href="volunteer.html" class="btn volunteer">Become a Volunteer</a>
     </div>
-  </div>
+  </section>
+
+  <section id="about">
+    <h2 class="section-title">About Us</h2>
+    <p>
+      FeedConnect was built with one mission — to reduce food wastage and combat hunger. We provide a seamless way for food donors to reach verified organizations in real-time. Whether you're a restaurant, household, or event organizer, your extra food can feed those who need it most.
+    </p>
+  </section>
+
+  <section id="volunteer">
+    <h2 class="section-title">Volunteer</h2>
+    <p>
+      Volunteers are the lifeline of FeedConnect. Help us pick up food from donors and deliver it to registered NGOs and shelters. You can register your interest by clicking the button below:
+    </p>
+    <a href="volunteer.html" class="btn volunteer">Join as Volunteer</a>
+  </section>
+
+  <footer>
+    <p>&copy; 2025 FeedConnect | Made with heart for a better world</p>
+  </footer>
 
 </body>
 </html>
