--- a/volunteer.html
+++ b/volunteer.html
@@ -1,41 +1,85 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Become a Volunteer - FeedConnect</title>
-  <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <title>Volunteer - FeedConnect</title>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet" />
+  <style>
+    body {
+      font-family: 'Montserrat', sans-serif;
+      background: linear-gradient(135deg, #e0f7fa, #e1bee7);
+      margin: 0;
+    }
+
+    .container {
+      max-width: 600px;
+      background: white;
+      margin: 80px auto;
+      padding: 40px;
+      border-radius: 15px;
+      box-shadow: 0 10px 25px rgba(0,0,0,0.1);
+    }
+
+    h2 {
+      text-align: center;
+      color: #4a148c;
+      margin-bottom: 30px;
+    }
+
+    label {
+      display: block;
+      margin-top: 15px;
+      font-weight: bold;
+    }
+
+    input, textarea {
+      width: 100%;
+      padding: 10px;
+      margin-top: 5px;
+      margin-bottom: 20px;
+      border-radius: 10px;
+      border: 1px solid #ccc;
+    }
+
+    button {
+      background: linear-gradient(to right, #ff7043, #f4511e);
+      color: white;
+      padding: 12px 25px;
+      border: none;
+      border-radius: 25px;
+      font-size: 16px;
+      cursor: pointer;
+      display: block;
+      margin: 0 auto;
+      transition: 0.3s ease;
+    }
+
+    button:hover {
+      background: linear-gradient(to right, #e64a19, #bf360c);
+      transform: scale(1.05);
+    }
+  </style>
 </head>
 <body>
-  <header class="hero" style="height: 50vh; background-image: url('https://www.shutterstock.com/shutterstock/videos/3493788363/thumb/1.jpg?ip=x480');">
-    <div class="overlay">
-      <h1>Become a Volunteer</h1>
-      <p>Help us bridge the gap between food donors and those in need.</p>
-    </div>
-  </header>
-  <main>
-    <section class="intro">
-      <h2>Volunteer Signup Form</h2>
-      <p>Join our network and help distribute food to the hungry.</p>
-      <form action="#" method="POST" style="max-width: 500px; margin: auto; background: white; padding: 20px; border-radius: 8px; box-shadow: 0 0 10px rgba(0,0,0,0.1);">
-        <label for="vname">Full Name</label><br>
-        <input type="text" id="vname" name="vname" required style="width: 100%; padding: 10px; margin: 10px 0;"><br>
 
-        <label for="vlocation">Preferred Location</label><br>
-        <input type="text" id="vlocation" name="vlocation" required style="width: 100%; padding: 10px; margin: 10px 0;"><br>
+  <div class="container">
+    <h2>Volunteer with Us</h2>
+    <form action="https://forms.gle/YOUR_FORM_LINK_HERE" method="post">
+      <label for="vname">Your Name</label>
+      <input type="text" id="vname" name="vname" required>
 
-        <label for="vcontact">Contact Number</label><br>
-        <input type="text" id="vcontact" name="vcontact" required style="width: 100%; padding: 10px; margin: 10px 0;"><br>
+      <label for="vemail">Email</label>
+      <input type="email" id="vemail" name="vemail" required>
 
-        <label for="vavailability">Availability (Days/Time)</label><br>
-        <input type="text" id="vavailability" name="vavailability" required style="width: 100%; padding: 10px; margin: 10px 0;"><br>
+      <label for="varea">Preferred Area to Serve</label>
+      <input type="text" id="varea" name="varea" required>
 
-        <button type="submit" style="padding: 10px 20px; background-color: #007bff; color: white; border: none; cursor: pointer;">Submit</button>
-      </form>
-    </section>
-  </main>
-  <footer>
-    <p>© 2025 FeedConnect | Contact: info@feedconnect.org</p>
-  </footer>
+      <label for="vavailability">Availability</label>
+      <textarea id="vavailability" name="vavailability" rows="2"></textarea>
+
+      <button type="submit">Register as Volunteer</button>
+    </form>
+  </div>
+
 </body>
 </html>
