--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
     <nav>
       <a href="#about">About</a>
       <a href="#donate">Donate</a>
-      <a href="#register">Register Org</a>
+      <a href="#register">Register</a>
       <a href="#volunteer">Volunteer</a>
     </nav>
   </header>
