--- a/volunteer.html
+++ b/volunteer.html
@@ -2,19 +2,20 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Volunteer - FeedConnect</title>
+  <title>Volunteer with Us - FeedConnect</title>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet" />
   <style>
     body {
       font-family: 'Montserrat', sans-serif;
-      background: linear-gradient(135deg, #e0f7fa, #e1bee7);
+      background: linear-gradient(135deg, #e8f5e9, #c8e6c9);
       margin: 0;
+      padding: 0;
     }
 
     .container {
       max-width: 600px;
-      background: white;
       margin: 80px auto;
+      background: white;
       padding: 40px;
       border-radius: 15px;
       box-shadow: 0 10px 25px rgba(0,0,0,0.1);
@@ -22,64 +23,88 @@
 
     h2 {
       text-align: center;
-      color: #4a148c;
+      color: #2e7d32;
       margin-bottom: 30px;
     }
 
     label {
-      display: block;
-      margin-top: 15px;
       font-weight: bold;
+      margin-top: 15px;
+      display: block;
     }
 
     input, textarea {
       width: 100%;
       padding: 10px;
-      margin-top: 5px;
+      margin-top: 8px;
       margin-bottom: 20px;
       border-radius: 10px;
       border: 1px solid #ccc;
     }
 
     button {
-      background: linear-gradient(to right, #ff7043, #f4511e);
+      background: linear-gradient(to right, #66bb6a, #388e3c);
       color: white;
       padding: 12px 25px;
       border: none;
       border-radius: 25px;
       font-size: 16px;
       cursor: pointer;
-      display: block;
       margin: 0 auto;
-      transition: 0.3s ease;
+      display: block;
     }
 
-    button:hover {
-      background: linear-gradient(to right, #e64a19, #bf360c);
-      transform: scale(1.05);
+    .success-message {
+      text-align: center;
+      color: green;
+      font-weight: bold;
+      margin-top: 15px;
     }
   </style>
 </head>
 <body>
 
   <div class="container">
-    <h2>Volunteer with Us</h2>
-    <form action="https://forms.gle/YOUR_FORM_LINK_HERE" method="post">
-      <label for="vname">Your Name</label>
-      <input type="text" id="vname" name="vname" required>
+    <h2>Volunteer Registration</h2>
+    <form id="volunteerForm" action="https://script.google.com/macros/s/https://script.google.com/macros/s/AKfycbwS2awSdxcn9cF0xnDgu88miE8ZMqz1FalLZ-cB2BYhlo-FI0RjOE_7xr6_2bm9kqcJ/exec/exec" method="POST" onsubmit="submitForm(event)">
+      <label for="volName">Full Name</label>
+      <input type="text" name="volName" id="volName" required>
 
-      <label for="vemail">Email</label>
-      <input type="email" id="vemail" name="vemail" required>
+      <label for="volContact">Contact Number</label>
+      <input type="text" name="volContact" id="volContact" required>
 
-      <label for="varea">Preferred Area to Serve</label>
-      <input type="text" id="varea" name="varea" required>
+      <label for="area">Preferred Area / City</label>
+      <input type="text" name="area" id="area" required>
 
-      <label for="vavailability">Availability</label>
-      <textarea id="vavailability" name="vavailability" rows="2"></textarea>
+      <label for="availability">Availability</label>
+      <textarea name="availability" id="availability" required></textarea>
 
-      <button type="submit">Register as Volunteer</button>
+      <button type="submit">Join as Volunteer</button>
+      <div id="success" class="success-message"></div>
     </form>
   </div>
+
+  <script>
+    function submitForm(e) {
+      e.preventDefault();
+      const form = document.getElementById('volunteerForm');
+      const formData = new FormData(form);
+
+      fetch(form.action, {
+        method: "POST",
+        body: formData
+      })
+      .then(res => res.text())
+      .then(data => {
+        document.getElementById("success").textContent = "Thank you for signing up!";
+        form.reset();
+      })
+      .catch(error => {
+        alert("An error occurred. Please try again.");
+        console.error(error);
+      });
+    }
+  </script>
 
 </body>
 </html>
