--- a/donor.html
+++ b/donor.html
@@ -98,25 +98,24 @@
   </div>
 
   <script>
-    function submitForm(e) {
-      e.preventDefault();
-      const form = document.getElementById('donorForm');
-      const formData = new FormData(form);
+   const acceptorDataURL = "https://script.google.com/macros/s/AKfycbwS2awSdxcn9cF0xnDgu88miE8ZMqz1FalLZ-cB2BYhlo-FI0RjOE_7xr6_2bm9kqcJ/exec"; // Replace with your actual script URL
 
-      fetch(form.action, {
-        method: "POST",
-        body: formData
-      })
-      .then(res => res.text())
-      .then(data => {
-        document.getElementById("success").textContent = "Thank you! Your donation has been recorded.";
-        form.reset();
-      })
-      .catch(error => {
-        alert("An error occurred. Please try again.");
-        console.error("Error:", error);
+  fetch(acceptorDataURL)
+    .then(res => res.json())
+    .then(data => {
+      const dropdown = document.getElementById("acceptorDropdown");
+      dropdown.innerHTML = '<option value="">-- Select an Accepting Organization --</option>';
+      data.forEach(name => {
+        const option = document.createElement("option");
+        option.value = name;
+        option.textContent = name;
+        dropdown.appendChild(option);
       });
-    }
+    })
+    .catch(error => {
+      console.error("Error fetching acceptors:", error);
+      document.getElementById("acceptorDropdown").innerHTML = '<option>Error loading data</option>';
+    });
   </script>
 
 </body>
