--- a/acceptor.html
+++ b/acceptor.html
@@ -2,56 +2,90 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Register Organization</title>
+  <title>Register Organization - FeedConnect</title>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
   <style>
     body {
-      font-family: 'Segoe UI', sans-serif;
-      background: #f5f7fa;
-      padding: 50px;
-      display: flex;
-      justify-content: center;
+      margin: 0;
+      font-family: 'Poppins', sans-serif;
+      background: linear-gradient(135deg, #f9f9f9, #e6f2ff);
+      color: #333;
     }
-    .form-container {
-      background: #fff;
+
+    header {
+      background-color: #0077cc;
+      color: white;
+      padding: 20px 40px;
+      text-align: center;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+    }
+
+    header h1 {
+      margin: 0;
+      font-size: 28px;
+    }
+
+    .container {
+      max-width: 600px;
+      margin: 40px auto;
+      background: white;
       padding: 30px;
-      border-radius: 10px;
-      box-shadow: 0 0 15px rgba(0,0,0,0.1);
-      width: 100%;
-      max-width: 400px;
+      border-radius: 12px;
+      box-shadow: 0 4px 20px rgba(0,0,0,0.1);
     }
+
     h2 {
       text-align: center;
+      color: #0077cc;
       margin-bottom: 20px;
-      color: #2c3e50;
     }
+
     input, button {
       width: 100%;
       padding: 12px;
-      margin: 8px 0;
+      margin: 10px 0;
       border: 1px solid #ccc;
-      border-radius: 6px;
+      border-radius: 8px;
       font-size: 16px;
+      box-sizing: border-box;
     }
+
     button {
-      background-color: #27ae60;
+      background-color: #0077cc;
       color: white;
-      border: none;
-      cursor: pointer;
-    }
-    button:hover {
-      background-color: #219150;
-    }
-    #message {
-      margin-top: 10px;
-      text-align: center;
       font-weight: bold;
+      border: none;
+      transition: background 0.3s;
+    }
+
+    button:hover {
+      background-color: #005fa3;
+    }
+
+    #message {
+      text-align: center;
+      margin-top: 15px;
+      font-weight: bold;
+      color: green;
+    }
+
+    footer {
+      text-align: center;
+      padding: 20px;
+      background-color: #f1f1f1;
+      margin-top: 40px;
+      font-size: 14px;
     }
   </style>
 </head>
 <body>
 
-  <div class="form-container">
-    <h2>Register Your Organization</h2>
+  <header>
+    <h1>FeedConnect - Register Organization</h1>
+  </header>
+
+  <div class="container">
+    <h2>Organization Registration</h2>
     <form id="acceptorForm" onsubmit="submitForm(event)">
       <input type="hidden" name="formType" value="acceptor">
       <input type="text" name="orgName" placeholder="Organization Name" required>
@@ -62,28 +96,34 @@
     </form>
   </div>
 
+  <footer>
+    &copy; 2025 FeedConnect. Empowering communities through food sharing.
+  </footer>
+
   <script>
-    const scriptURL = "https://script.google.com/macros/s/AKfycbwS2awSdxcn9cF0xnDgu88miE8ZMqz1FalLZ-cB2BYhlo-FI0RjOE_7xr6_2bm9kqcJ/exec"; // Paste your Google Apps Script Web App URL here
+    const scriptURL = "https://script.google.com/macros/s/AKfycbwS2awSdxcn9cF0xnDgu88miE8ZMqz1FalLZ-cB2BYhlo-FI0RjOE_7xr6_2bm9kqcJ/exec"; // Replace with your actual script URL
 
     function submitForm(event) {
       event.preventDefault();
       const form = document.getElementById('acceptorForm');
-      const messageDiv = document.getElementById('message');
       const formData = new FormData(form);
+      const message = document.getElementById('message');
 
       fetch(scriptURL, { method: 'POST', body: formData })
         .then(response => response.text())
         .then(responseText => {
           if (responseText === "Success") {
-            messageDiv.textContent = "Registration successful!";
+            message.textContent = "Registration successful!";
             form.reset();
           } else {
-            messageDiv.textContent = "Error occurred. Please try again.";
+            message.textContent = "Error occurred. Please try again.";
+            message.style.color = "red";
           }
         })
         .catch(error => {
-          console.error("Error:", error);
-          messageDiv.textContent = "Something went wrong.";
+          console.error('Error!', error.message);
+          message.textContent = "Something went wrong.";
+          message.style.color = "red";
         });
     }
   </script>
