--- a/donor.html
+++ b/donor.html
@@ -1,122 +1,114 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <title>Donate Food - FeedConnect</title>
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet" />
+  <meta charset="UTF-8">
+  <title>Volunteer - FeedConnect</title>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
   <style>
     body {
-      font-family: 'Montserrat', sans-serif;
-      background: linear-gradient(135deg, #e0f7fa, #e1bee7);
+      font-family: 'Poppins', sans-serif;
+      background: linear-gradient(135deg, #f9f9f9, #e6f2ff);
       margin: 0;
-      padding: 0;
     }
-
+    header {
+      background-color: #0077cc;
+      color: white;
+      text-align: center;
+      padding: 20px 40px;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+    }
     .container {
       max-width: 600px;
+      margin: 40px auto;
       background: white;
-      margin: 80px auto;
-      padding: 40px;
-      border-radius: 15px;
-      box-shadow: 0 10px 25px rgba(0,0,0,0.1);
+      padding: 30px;
+      border-radius: 12px;
+      box-shadow: 0 4px 20px rgba(0,0,0,0.1);
     }
-
     h2 {
       text-align: center;
-      color: #4a148c;
-      margin-bottom: 30px;
+      color: #0077cc;
     }
-
-    label {
-      display: block;
-      margin: 15px 0 5px;
-      font-weight: bold;
-    }
-
-    input, select, textarea {
+    input, button {
       width: 100%;
-      padding: 10px;
-      border-radius: 10px;
+      padding: 12px;
+      margin: 10px 0;
       border: 1px solid #ccc;
-      margin-bottom: 20px;
-    }
-
-    button {
-      background: linear-gradient(to right, #66bb6a, #43a047);
-      color: white;
-      padding: 12px 25px;
-      border: none;
-      border-radius: 25px;
+      border-radius: 8px;
       font-size: 16px;
-      cursor: pointer;
-      display: block;
-      margin: 0 auto;
-      transition: 0.3s ease;
     }
-
-    button:hover {
-      background: linear-gradient(to right, #43a047, #2e7d32);
-      transform: scale(1.05);
-    }
-
-    .success-message {
-      text-align: center;
-      color: green;
+    button {
+      background-color: #0077cc;
+      color: white;
+      border: none;
       font-weight: bold;
-      margin-top: 15px;
+    }
+    button:hover {
+      background-color: #005fa3;
+    }
+    #message {
+      text-align: center;
+      font-weight: bold;
+      margin-top: 10px;
+    }
+    footer {
+      text-align: center;
+      padding: 20px;
+      background-color: #f1f1f1;
+      margin-top: 40px;
+      font-size: 14px;
     }
   </style>
 </head>
 <body>
 
-  <div class="container">
-    <h2>Donate Food</h2>
-    <form id="donorForm" action="https://script.google.com/macros/s/https://script.google.com/macros/s/AKfycbwS2awSdxcn9cF0xnDgu88miE8ZMqz1FalLZ-cB2BYhlo-FI0RjOE_7xr6_2bm9kqcJ/exec/exec" method="POST" onsubmit="submitForm(event)">
-      <label for="name">Your Name</label>
-      <input type="text" id="name" name="name" required>
+<header>
+  <h1>Volunteer With Us - FeedConnect</h1>
+</header>
 
-      <label for="food">Food Details</label>
-      <textarea id="food" name="food" rows="3" required></textarea>
+<div class="container">
+  <h2>Volunteer Form</h2>
+  <form id="volunteerForm" onsubmit="submitForm(event)">
+    <input type="hidden" name="formType" value="volunteer">
+    <input type="text" name="name" placeholder="Your Name" required>
+    <input type="text" name="skills" placeholder="Skills / Availability" required>
+    <input type="text" name="contact" placeholder="Contact Info" required>
+    <button type="submit">Register</button>
+    <div id="message"></div>
+  </form>
+</div>
 
-      <label for="quantity">Quantity (approx)</label>
-      <input type="text" id="quantity" name="quantity" required>
+<footer>
+  &copy; 2025 FeedConnect. Empowering communities through food sharing.
+</footer>
 
-      <label for="organization">Choose Orphanage / Old Age Home</label>
-      <select id="organization" name="organization" required>
-        <option value="">-- Select --</option>
-        <option value="Happy Home Orphanage">Happy Home Orphanage</option>
-        <option value="Silver Age Shelter">Silver Age Shelter</option>
-        <!-- Add dynamic options here -->
-      </select>
+<script>
+  const scriptURL = "YOUR_GOOGLE_APPS_SCRIPT_URL"; // Replace with your script URL
 
-      <label for="contact">Your Contact</label>
-      <input type="text" id="contact" name="contact" required>
+  function submitForm(event) {
+    event.preventDefault();
+    const form = document.getElementById('volunteerForm');
+    const formData = new FormData(form);
+    const message = document.getElementById('message');
 
-      <button type="submit">Submit Donation</button>
-      <div id="success" class="success-message"></div>
-    </form>
-  </div>
-
-  <script>
-   const acceptorDataURL = "https://script.google.com/macros/s/AKfycbwS2awSdxcn9cF0xnDgu88miE8ZMqz1FalLZ-cB2BYhlo-FI0RjOE_7xr6_2bm9kqcJ/exec"; // Replace with your actual script URL
-
-  fetch(acceptorDataURL)
-    .then(res => res.json())
-    .then(data => {
-      const dropdown = document.getElementById("acceptorDropdown");
-      dropdown.innerHTML = '<option value="">-- Select an Accepting Organization --</option>';
-      data.forEach(name => {
-        const option = document.createElement("option");
-        option.value = name;
-        option.textContent = name;
-        dropdown.appendChild(option);
+    fetch(scriptURL, { method: 'POST', body: formData })
+      .then(res => res.text())
+      .then(response => {
+        if (response === "Success") {
+          message.textContent = "Registration successful!";
+          message.style.color = "green";
+          form.reset();
+        } else {
+          message.textContent = "Error occurred.";
+          message.style.color = "red";
+        }
+      })
+      .catch(err => {
+        message.textContent = "Something went wrong.";
+        message.style.color = "red";
       });
-    })
-    .catch(error => {
-      console.error("Error fetching acceptors:", error);
-      document.getElementById("acceptorDropdown").innerHTML = '<option>Error loading data</option>';
-    });
-  </script>
+  }
+</script>
 
 </body>
 </html>
