--- a/donor.html
+++ b/donor.html
@@ -83,7 +83,7 @@
 </footer>
 
 <script>
-  const scriptURL = "YOUR_GOOGLE_APPS_SCRIPT_URL"; // Replace with your script URL
+  const scriptURL = "https://script.google.com/macros/s/AKfycbwS2awSdxcn9cF0xnDgu88miE8ZMqz1FalLZ-cB2BYhlo-FI0RjOE_7xr6_2bm9kqcJ/exec"; // Replace with your script URL
 
   function submitForm(event) {
     event.preventDefault();
